--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,11 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="home_main.css"
+  </head>
+  <body>
+    <h1>Not Hotdog</h1>
+    <p>Show me something and I'll tell you if it's a hot dog.</p>
+  </body>
+</html>
